[Mac] Update location bar colors when change themes in Material Design.

Incognito windows show a dark location bar when using the system theme
and a regular (white) location bar when using a custom theme. This cl
allows an Incognito window's location bar to switch between dark and
regular modes as the user changes themes.

R=avi@chromium.org
BUG=595033

Review URL: https://codereview.chromium.org/1866523002

Cr-Commit-Position: refs/heads/master@{#385780}

Former-commit-id: b490b0d0e249b36bc21274a69585dfec4e04e513